--- a/app/views/obbank.html
+++ b/app/views/obbank.html
@@ -148,12 +148,6 @@
       display: none;
     }
 
-    hr.style-two {
-      border: 0;
-      height: 1px;
-      background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
-    }
-
     .inline-field input,
     .inline-field label {
       display: inline-block;
@@ -188,19 +182,58 @@
           Who do you bank with?
           </h1>
 
-          <form class="form" action="/bank-success" method="get">
+          <form class="form" id="bankForm" action="/bank-success" method="get">
 
-            <label class="govuk-c-label" for="select-1">
-            Please select your banking provider(s) from this list and log in to your online banking:
-            </label>
-            <br>
-            <select class="govuk-c-select" id="select-1" name="select-1">
-              <option value="1">Togetherbank</option>
-            </select>
-            <p>Repeat this process for all banks you have accounts with.</p>
-            <input class="govuk-c-button" id="myBtn" value="Log in to your bank" onclick="setTimeout(delayModalOpen, 1000)" style="width:auto;" readonly>
-            <br>
-            <input class="govuk-c-button" type="submit" value="Continue">
+            <div class="govuk-c-radios">
+              <fieldset class="govuk-c-fieldset" data-required data-error="Cannot be blank">
+                <legend class="govuk-c-fieldset__legend">
+                  <h4 class="govuk-heading">Please select your banking provider from this list and log in to your online banking:</h4>
+                </legend>
+                <div class="govuk-c-radios__item">
+                  <input class="govuk-c-radios__input" id="bank-1" name="bank" type="radio" value="togetherbank" checked="checked" required>
+                  <label class="govuk-c-label govuk-c-radios__label" for="bank-1">
+                  Togetherbank
+                </label>
+                </div>
+                <div class="govuk-c-radios__item">
+                  <input class="govuk-c-radios__input" id="bank-2" name="bank" type="radio" value="myBank">
+                  <label class="govuk-c-label govuk-c-radios__label" for="bank-2">
+                  myBank
+                </label>
+                </div>
+                <div class="govuk-c-radios__item">
+                  <input class="govuk-c-radios__input" id="bank-3" name="bank" type="radio" value="HappyBank">
+                  <label class="govuk-c-label govuk-c-radios__label" for="bank-3">
+                  HappyBank
+                </label>
+                </div>
+              </fieldset>
+            </div>
+
+            <div class="govuk-c-radios">
+              <fieldset class="govuk-c-fieldset" data-required data-error="Cannot be blank">
+                <legend class="govuk-c-fieldset__legend">
+                  <h4 class="govuk-heading">Do you have another bank account?</h4>
+                </legend>
+                <div class="govuk-c-radios__item">
+                  <input class="govuk-c-radios__input" id="other-bank-1" name="other-bank" type="radio" value="yes" required>
+                  <label class="govuk-c-label govuk-c-radios__label" for="other-bank-1">
+                  Yes
+                </label>
+                </div>
+                <div class="govuk-c-radios__item">
+                  <input class="govuk-c-radios__input" id="other-bank-2" name="other-bank" type="radio" value="no" checked="checked">
+                  <label class="govuk-c-label govuk-c-radios__label" for="other-bank-2">
+                  No
+                </label>
+                </div>
+              </fieldset>
+            </div>
+
+            <input class="govuk-c-button" id="myBtn" value="Continue" onclick="setTimeout(modalOpen, 1000)" style="width:auto;" readonly>
+            <!--input class="govuk-c-button" id="myBtn" value="Log in to your bank" onclick="setTimeout(modalOpen, 1000)" style="width:auto;" readonly>
+              <br>
+              <input class="govuk-c-button" type="submit" value="Continue-->
           </form>
         </div>
       </div>
@@ -217,6 +250,10 @@
       </div>
 
       <div id="step1" class="container">
+        <div align="center"><img src="public/images/padlock.png" alt="padlock" height="42" width="42" style="vertical-align: middle"><b>Log in securely</b></div>
+        <br>
+        <h4>Please log in to your Togetherbank online account</h4>
+        <br>
         <label for="uname"><b>Username</b></label>
         <input class="uname" type="text" placeholder="Enter Username" name="uname" style="width: 100%;
               padding: 12px 20px;
@@ -236,7 +273,7 @@
         <button id="login" type="button">Continue</button>
 
         <div class="modal-footer" style="background-color:#f1f1f1">
-          <button type="button" onclick="setTimeout(delayModalClose, 1000)" class="cancelbtn">Cancel</button>
+          <button type="button" onclick="setTimeout(modalClose, 1000)" class="cancelbtn">Cancel</button>
           <span class="psw">I've forgotten my <a href="#">login details</a></span>
         </div>
         <div class="imgcontainer">
@@ -245,6 +282,8 @@
       </div>
 
       <div type="modalpage" id="step2" class="hideMe" class="container">
+        <div align="center"><img src="public/images/padlock.png" alt="padlock" height="42" width="42" style="vertical-align: middle"><b>Log in securely</b></div>
+        <br>
         <h4>Your memorable data</h4>
         <br>
         <text>Please enter the following characters from your memorable word:</text>
@@ -268,7 +307,7 @@
         <br>
         <button id="memorable" type="button">Log in securely now</button>
         <div class="modal-footer" style="background-color:#f1f1f1">
-          <button type="button" onclick="setTimeout(delayModalClose, 1000)" class="cancelbtn">Cancel</button>
+          <button type="button" onclick="setTimeout(modalClose, 1000)" class="cancelbtn">Cancel</button>
           <span class="psw">I've forgotten my <a href="#">login details</a></span>
         </div>
         <div class="imgcontainer">
@@ -277,16 +316,27 @@
       </div>
 
       <div type="modalpage" id="step4" class="hideMe" class="container">
-        <h3>Thank you</h3><br>
-        <p>Put some confirmation text here</p>
-        <button id="close" type="button" onclick="setTimeout(delayModalClose, 1000)">Close</button>
+        <div align="center"><img src="public/images/padlock.png" alt="padlock" height="42" width="42" style="vertical-align: middle"><b>Authorisation</b></div>
+        <br>
+        <h3>Please authorise us to access you accounts</h3>
+        <br>
+        <p>Before you authorise, be aware of the following information</p>
+        <ul>
+          <li>The Ministry of Justice will use this data to support your application for Legal Aid</li>
+          <li>Your data won't be used for any other purpose</li>
+          <li>Your data will be kept for no longer than 3 months</li>
+        </ul>
+        <button id="authorise" type="button" onclick="setTimeout(modalCloseAndSubmit, 1000)">Authorise</button>
+        <button id="deny" type="button" onclick="setTimeout(modalClose, 1000)">Deny</button>
         <div class="imgcontainer">
           <img src="public/images/secure-connection.png" alt="padlock">
         </div>
       </div>
 
       <div type="modalpage" id="step3" class="hideMe" class="container">
-        <h3>Welcome back</h3><br>
+        <div align="center"><img src="public/images/padlock.png" alt="padlock" height="42" width="42" style="vertical-align: middle"><b> Select account(s)</b></div>
+        <br>
+        <h3>Welcome back to Togetherbank</h3><br>
         <h4>The Ministry of Justice have requested access to your bank accounts</h4>
         <p>Please select the accounts you want to grant access to. The Ministry of Justice will be able to access</p>
         <ul>
@@ -298,20 +348,18 @@
 
         <form action="">
           <div class="inline-field">
-            <hr class="style-two">
             <input type="checkbox" name="account1" value="Current"><label for="account1"><b>Togetherbank Current Account</b><br>Account Number: 123456789</label>
-            <hr class="style-two">
+            <hr>
             <input type="checkbox" name="account2" value="Savings"><label for="account2"><b>Togetherbank Savings Account</b><br>Account Number: 987654321</label>
-            <hr class="style-two">
+            <hr>
             <input type="checkbox" name="account3" value="Savings"><label for="account3"><b>Togetherbank Cash ISA</b><br>Account Number: 248163264</label>
-            <hr class="style-two">
           </div>
         </form>
-
-        <button id="approve" type="button">Approve</button>
+        <br>
+        <button id="approve" type="button">Next</button>
 
         <div class="modal-footer" style="background-color:#f1f1f1">
-          <button type="button" onclick="setTimeout(delayModalClose, 1000)" class="cancelbtn">Cancel</button>
+          <button type="button" onclick="setTimeout(modalClose, 1000)" class="cancelbtn">Cancel</button>
         </div>
         <div class="imgcontainer">
           <img src="public/images/secure-connection.png" alt="padlock">
@@ -325,20 +373,36 @@
     var modal = document.getElementById('id01');
   </script>
 
-  <!--Open the modal, with time delay for realism-->
+  <!--Open the modal-->
   <script>
-    function delayModalOpen() {
+    function modalOpen() {
       document.getElementById('id01').style.display = 'block';
     }
   </script>
 
-  <!--Close the modal, with time delay for realism-->
+  <!--Close the modal-->
   <script>
-    function delayModalClose() {
+    function modalClose() {
       document.getElementById('id01').style.display = 'none';
     }
   </script>
 
+  <!--Close the modal and submit form at end of bank process if no more banks
+    need to be checked-->
+  <script>
+    function modalCloseAndSubmit() {
+
+      var radios = $("input[name=other-bank]:checked").val()
+
+      if (radios === 'yes') {
+
+        document.getElementById('id01').style.display = 'none';
+      } else {
+        document.getElementById('id01').style.display = 'none';
+        document.getElementById('bankForm').submit();
+      }
+    }
+  </script>
 
   <!--move from page 1 to page 2 -->
   <script>
