--- a/app/views/crime/start.html
+++ b/app/views/crime/start.html
@@ -18,18 +18,80 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step 1 of 16</b></p>
+    <p class="govuk-body"><b>Step 1 of 17</b></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
-        <h2 class="govuk-heading-xl">
-          This is the last page of the Interest of Justice section of the crime eForm.
-        </h2>
+        <h1 class="govuk-heading-xl">
+          Evidence 1: Questions to inform evidential requirements
+        </h1>
 
-        <p class="govuk-body">It needs to be customised to look like that page.</p>
+        <form class="form" action="/crime/obexpress" method="post">
 
-        <a class="govuk-c-button govuk-c-button--start govuk-!-mt-r2 govuk-!-mb-r8" href="/obexpress" role="button">Continue</a>
+          <div class="govuk-c-radios">
+            <fieldset class="govuk-c-fieldset">
+              <legend class="govuk-c-fieldset__legend">
+                <h4 class="govuk-heading">Has a court remanded you in custody?</h4>
+              </legend>
+              <div class="govuk-c-radios__item">
+                <input class="govuk-c-radios__input" id="prisoner-1" name="prisoner" type="radio" value="yes" required>
+                <label class="govuk-c-label govuk-c-radios__label" for="prisoner-1">
+              Yes
+            </label>
+              </div>
+              <div class="govuk-c-radios__item">
+                <input class="govuk-c-radios__input" id="prisoner-2" name="prisoner" type="radio" value="no">
+                <label class="govuk-c-label govuk-c-radios__label" for="prisoner-2">
+              No
+            </label>
+              </div>
+            </fieldset>
+          </div>
+
+          <div class="govuk-c-radios">
+            <fieldset class="govuk-c-fieldset">
+              <legend class="govuk-c-fieldset__legend">
+                <h4 class="govuk-heading">Are you employed (excluding being self employed)?</h4>
+              </legend>
+              <div class="govuk-c-radios__item">
+                <input class="govuk-c-radios__input" id="employed-1" name="employed" type="radio" value="yes" required>
+                <label class="govuk-c-label govuk-c-radios__label" for="employed-1">
+              Yes
+            </label>
+              </div>
+              <div class="govuk-c-radios__item">
+                <input class="govuk-c-radios__input" id="employed-2" name="employed" type="radio" value="no">
+                <label class="govuk-c-label govuk-c-radios__label" for="employed-2">
+              No
+            </label>
+              </div>
+            </fieldset>
+          </div>
+
+
+          <div class="govuk-c-radios">
+            <fieldset class="govuk-c-fieldset">
+              <legend class="govuk-c-fieldset__legend">
+                <h4 class="govuk-heading">Have you ceased employment within the last three months?</h4>
+              </legend>
+              <div class="govuk-c-radios__item">
+                <input class="govuk-c-radios__input" id="ceased-employment-1" name="ceased-employment" type="radio" value="yes" required>
+                <label class="govuk-c-label govuk-c-radios__label" for="ceased-employment-1">
+              Yes
+            </label>
+              </div>
+              <div class="govuk-c-radios__item">
+                <input class="govuk-c-radios__input" id="ceased-employment-2" name="ceased-employment" type="radio" value="no">
+                <label class="govuk-c-label govuk-c-radios__label" for="ceased-employment-2">
+              No
+            </label>
+              </div>
+            </fieldset>
+          </div>
+
+          <input class="govuk-c-button" type="submit" value="Continue">
+        </form>
 
       </div>
 
