--- a/app/views/crime/mandatory-evidence.html
+++ b/app/views/crime/mandatory-evidence.html
@@ -33,7 +33,7 @@
           <label class="govuk-c-label govuk-c-checkboxes__label" for="confirm">Please confirm that you have read and understood the above by ticking this box</label>
         </div>
 
-        <a class="govuk-c-back-link" href="/civil/means-result">Back</a>
+        <a class="govuk-c-back-link" href="/crime/means-result">Back</a>
 
       </div>
     </div>
