--- a/app/views/crime/valuables.html
+++ b/app/views/crime/valuables.html
@@ -20,10 +20,8 @@
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h1 class="govuk-heading-xl">
-          Do you own any items worth £500 or more?
+          Do you own a motor vehicle?
         </h1>
-
-        <p class="govuk-body">Valuables include things like jewellery, antiques, paintings or collectable items.</p>
 
         <form class="form" action="/crime/means-result" method="post">
 
